# python-ML-Engineer-Basics

./: README.md
1 - Python Core Skills/: README.md
1-PythonCoreSkills/: README.md  pyproject.toml
1-PythonCoreSkills/src/: coreSkills.ipynb
1-PythonCoreSkills/src/pythoncoreskills/: coreSkills.ipynb
2-PythonDataStructureAndAlgorithms/: README.md  pyproject.toml
2-PythonDataStructureAndAlgorithms/src/: dataStuctAndAlgo.ipynb
2-TestDrivenDevelopment/: README.md  pyproject.toml  pytest.ini
2-TestDrivenDevelopment/src/testdrivendevelopment/: tdd.py
2-TestDrivenDevelopment/test/: test_tdd.py
7-MachineLearningLibraries/: README.md  pyproject.toml
7-MachineLearningLibraries/src/machinelearninglibraries/: dataPrep2.ipynb
7-MachineLearningLibraries/src/machinelearninglibraries/classification/: gradientiBoostingClassifier.ipynb  logisticRegressionClassifier.ipynb  randomForestClassifier.ipynb
7-MachineLearningLibraries/src/machinelearninglibraries/clustering/: DBSCAN.ipynb  KMeans.ipynb
7-MachineLearningLibraries/src/machinelearninglibraries/dataPrepartion/: featureSelectionPCA.ipynb  preprocessing1.ipynb  preprocessing3.ipynb
7-MachineLearningLibraries/src/machinelearninglibraries/regression/: MLPRegression.ipynb  XGBoost.ipynb
7-MachineLearningLibraries/src/machinelearninglibraries/textClassification/: naiveBayes.ipynb  supportVectorMachine.ipynb
8-DeepLearningLibraries/: README.md
8-DeepLearningLibraries/src/: mnistCNN.ipynb  textRNN.ipynb
