[project]
name = "1-pythoncoreskills"
version = "0.1.0"
description = ""
authors = [
    {name = "maver01",email = "matteo.sabadin4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
